tests/snapshots/integration__fails_with_invalid_render_method.snap
---
source: tests/tests.rs
expression: all
---

---input.decor---
#h1:This is a page

#div[class="green"]
  #p Hello, my name is #em[class="red"] Diego! /em /p
/div

