tests/snapshots/integration__prerender_generates_html.snap
---
source: tests/tests.rs
expression: all
---

---input.decor---
#h1:This is a page

#div[class="green"]
  #p Hello, my name is #em[class="red"] Diego! /em /p
/div

---out.html---
<h1>This is a page</h1><div class="green">
  <p>Hello, my name is <em class="red">Diego!</em></p></div>
---out.js---

