tests/snapshots/integration__warn_on_deps_that_are_not_found.snap
---
source: tests/tests.rs
expression: "String::from_utf8_lossy(assertion.get_output().stderr.as_slice())"
---
[33mWarning:[0m script dependency not found: decor-should-never-be-found-on-a-system

