tests/snapshots/integration__warns_on_unused_build_args.snap
---
source: tests/tests.rs
expression: "String::from_utf8_lossy(assertion.get_output().stderr.as_slice())"
---
[33mWarning:[0m no WebAssembly to compile - build args do nothing

