tests/snapshots/integration__wasm_and_css_are_integrated_into_index_html.snap
---
source: tests/tests.rs
expression: all
---

---index.html---
<!DOCTYPE html>
<html lang="en">
  <head>
    <meta charset="UTF-8" />
    <meta name="viewport" content="width=device-width, initial-scale=1" />
    <link href="out.css" rel="stylesheet" />
  </head>
  <body>
    <script type="module" src="out.js"></script>
    

<h1 class="decor-0">Hello!</h1>
  </body>
</html>

---input.decor---
---c
#include <stdio.h>

int main() {
    printf("Hello World\n");
    return 0;
}
---

#h1:Hello!

---css
h1 {
  color: red;
}
---

---__tmp.js---
IGNORED

---__tmp.wasm---
COULD NOT BE READ: stream did not contain valid UTF-8

---out.css---
h1.decor-0 {
  color: red;
}

---out.js---
import init from "./out/__tmp.js";
let wasm = await init();

